Fix: Header z-index 수정

--- a/src/app.scss
+++ b/src/app.scss
@@ -6,6 +6,7 @@
   // height: 100vh;
 
   .top {
+    z-index: 9;
     position: fixed;
     top: 0;
     left: 0;
